# reverse-anki

./: README.md  pyproject.toml
reverse_anki/: import.py  load.py  model.py  reverse.py
reverse_anki/resources/: logging_config.ini
tests/: test_load.py
