[tool.poetry]
name = "reverse-anki"
version = "0.1.0"
description = ""
authors = ["Juan Miguel Alvarez Tosco <juanmi.alvarez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anki = "^23.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
